--- a/style.scss
+++ b/style.scss
@@ -48,17 +48,17 @@ header{
     width: -webkit-fill-available;
     z-index: 3;
     padding: 0 15px;
-    top:20px;
-    
+    top:20px;   
         
     .col-xs-12{
-        flex:1;}
+        flex:1;
+    }
     .header-menu{
         display: flex;
         justify-content: space-between;
         height: 50px;
         align-items: center;
-        .logo a, .menu-hover{
+        .logo a{
             font-size: 25px;
             color:$text-color;
             font-weight: bold;
@@ -68,26 +68,144 @@ header{
                     font-weight: normal;
                 }
             }
-        }
-     }
+            .menu-app {
+                background: rgba(255, 255, 255, 0.15);
+                border-radius: 100%;
+                height: 40px;
+                width: 40px;
+                line-height: 2.5em;
+                color: #FFF;
+                text-align: center;
+                display: flex;
+                align-items: center;
+                left: 10px;
 
-    
-.header:hover .menu-app {
-        visibility: visible;
+                &:hover{
+                    background-color:transparent;
+                     border:1px solid #fff;
+                    }
+               
+                    .container{
+                         flex:1;
+                            .col-xs-12{
+                                flex:1;
+                                display:flex;
+                                
+
+                                    nav{
+                                        display:flex;
+                                            .menu{
+                                                color: $text-color;
+                                                width: 280px;
+                                                max-width: 280px;
+                                                transition: all 500ms ease-in-out;
+                                                transform: translateX(150%); 
+                                                background-color: #f64242;
+                                                z-index: 2;
+                                                height: 100%;
+                                                overflow-y: auto;
+                                                padding: 52px 35px;
+                                                position: fixed;
+                                                width: 300px;
+                                                right: 0;
+                                                top: 0;
+                                                    ul{
+                                                        list-style: none;
+                                                        padding: 0;
+                                                    }
+                                                    a {
+                                                        border-top: solid 1px $text-color;
+                                                        text-decoration: none;
+                                                        color: $text-color;
+                                                        display: flex;
+                                                        cursor: pointer;
+                                                        padding: 20px 0px;
+                                                    }
+                                                    li:first-child a{
+                                                        border-top: none;
+                                                    }
+                                                }                                         
+                                                .navigation{
+                                                        .active-menu{
+                                                            opacity: 1;
+                                                            visibility: visible;
+                                                            transform: translateX(0);
+                                                            top: inherit;
+                                                            background-color: #1d2126;
+                                                            display: block;
+                                                            width: 200px;
+                                                        }
+                                                }
+                                                .hiden-menu{
+                                                    opacity:0;
+                                                    visibility: hidden;
+                                                }
+                                                .transform-menu{
+                                                    visibility: visible;
+                                                    opacity:1;
+                                                    transform: translateX(0px);
+                                                }       
+                                            .nav-mobile-menu{
+                                            width:15px;
+                                            height:9px;
+                                            position: relative;
+                                            margin-inline-start: auto;
+                                            z-index:10;
+                                                
+                                    
+                                                span{
+                                                    height:1px;
+                                                    background-color: #fff;
+                                                    position:absolute;
+                                                    left:0;
+                                                    right: 0;
+                                                    transition: .25s ease-in-out; 
+                                                    
+                                                    
+                                                    &:nth-child(2){
+                                                        top: 50%;
+                                                    }
+                                                    &:nth-child(3){
+                                                        bottom:0;
+                                                    }
+                                                    
+                                                }                                               
+                                            }
+                                    }                  
+                            }
+                    }
+            }
+    }       
 }
+
+
+.nav-mobile-menu.active-menu span:nth-child(1){
+    top:50%;
+    transform:rotate(45deg);
+}
+.nav-mobile-menu.active-menu span:nth-child(2){
+    top:50%;
+    transform:rotate(-45deg);
+}
+
+.nav-mobile-menu.active-menu span:nth-child(3){
+    transform:scale(0);
+}
+
+
 
 .block{
      justify-content: center;
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    border-top: 0;
     min-height: 100vh;
-    height: 100vh;
+    border-top: 0;
     overflow: hidden;
     opacity: .75;
     display: flex;
     align-items: center;
+    padding: 15px 0;
 }
 
 .block-1{
@@ -106,78 +224,6 @@ header{
         }
 
      }
-
-
-
-.menu-app {
-    background-color: $primary-color;
-    display: flex;
-    z-index: 2;
-    height: 100%;
-    overflow-y: auto;
-    padding: 52px 35px;
-    position: fixed;
-    width: 300px;
-    right: 0;
-    top: 0;
-    visibility: hidden;
-        .container{
-            flex:1;
-        .col-xs-12{
-             flex:1;
-             .close{
-                justify-content: flex-end;
-                align-items: end;
-                button{
-                    border: 0;
-                    background-color: transparent;
-                    color: #fbb5b5;
-                    cursor: pointer;
-                    position: absolute;
-                    display: flex;
-                    right: 0;
-                    font-weight: bold;
-                    margin: 0px 20px;
-                    top: 30px;
-                
-                &:focus {
-                    outline: none;
-                }
-            }   
-            }
-             .menu{
-                color: $text-color;
-                
-            
-                ul{
-                    list-style: none;
-                    padding: 0;
-                }
-                a {
-                    border-top: solid 1px $text-color;
-                    text-decoration: none;
-                    color: $text-color;
-                    display: flex;
-                    cursor: pointer;
-                    padding: 20px 0px;
-                }
-                li:first-child a{
-                    border-top: none;
-                }
-            }
-     
-    }
-}
-}
-
-
-
-
-
-
-
-
-
 
 .block-2{
     width:100%;
@@ -198,45 +244,45 @@ header{
             line-height: 25px;
             border-radius: 5px;
 
-            .title{
-                margin:15px 0px;
+                .title{
+                    margin:15px 0px;
 
-                h2{
-                    color:$text-color;
-                    font-size: 28px;
-                    margin:15px;
+                        h2{
+                            color:$text-color;
+                            font-size: 28px;
+                            margin:15px;
+                        }
+                        span{
+                            color:$text-color;
+                            font-size: 20px;
+                            margin:10px;
+                        }
                 }
-                span{
-                    color:$text-color;
-                    font-size: 20px;
-                    margin:10px;
-                }
-            }
-            .description{
+                .description{
                     color:$text-color;
                     font-size: 15px;
                     margin:25px 0px;
-            }
+                }
 
-            .learn-more{
-                button{
-                    background-color:transparent;
-                    border: $text-color 1px solid;
-                    border-radius: 5px;
-                    cursor: pointer;
-                    font-weight: bold;
-                    padding: 15px 20px;
-                    text-transform: uppercase;
-                    text-align: center;
-                    margin-top:15px;
-                    color:$text-color;
-                    &:hover{
-                        background-color: rgba(144, 144, 144, 0.075);
+                .learn-more{
+                    button{
+                        background-color:transparent;
+                        border: $text-color 1px solid;
+                        border-radius: 5px;
+                        cursor: pointer;
+                        font-weight: bold;
+                        padding: 15px 20px;
+                        text-transform: uppercase;
+                        text-align: center;
+                        margin-top:15px;
+                        color:$text-color;
+                            &:hover{
+                                background-color: rgba(144, 144, 144, 0.075);
+                            }
                     }
                 }
-            }
         }
-    }
+}
      
      .block-3{
         width:100%;
@@ -264,54 +310,49 @@ header{
     form{
         display: inline;
         margin: 0 auto;
-        .first-block{
-            display: inline-block;
-            width: 47%;}
-        .field{
-        
-            textarea{
+            .first-block{
+                 display: inline-block;
+                 width: 47%;}
+            .field{       
+                textarea{
                 height:200px;
                 padding: 12px;
-            }  
-        }
-    
-    input, textarea {
-        background: rgba(255, 255, 255, 0.075);
-        height: 32px;
+                }  
+            }
+            input, textarea {
+                background: rgba(255, 255, 255, 0.075);
+                height: 32px;
+                border-radius: 4px;
+                border: none;
+                border: rgba(255, 255, 255, 0.25)solid 1px;
+                color: inherit;
+                display: block;
+                padding: 0 1em;
+                width: 90%;
+                margin-bottom: 15px;        
+            }
+            ::placeholder {
+                color:$text-color;
+                opacity: 0.5;
+            }
+            label{
+                display: block;
+                font-size: 0.9em;
+                margin-bottom:16px;
+            }
+    }
+    button{
+        background-color: transparent;
+        cursor: pointer;
+        padding: 10px 20px;
+        text-transform: uppercase;
+        color: #fff;
+        border: rgba(255, 255, 255, 0.25) 1px solid;
         border-radius: 4px;
-        border: none;
-        border: rgba(255, 255, 255, 0.25)solid 1px;
-        color: inherit;
-        display: block;
-        padding: 0 1em;
-        width: 90%;
-        margin-bottom: 15px;
-        
+            &:hover{
+                background-color: rgba(255, 255, 255, 0.075);
+            }
     }
-    ::placeholder {
-        color:$text-color;
-        opacity: 0.5;
-      }
-
-    label{
-        display: block;
-        font-size: 0.9em;
-        margin-bottom:16px;
-    }
-   
-}
-button{
-    background-color: transparent;
-    cursor: pointer;
-    padding: 10px 20px;
-    text-transform: uppercase;
-    color: #fff;
-    border: rgba(255, 255, 255, 0.25) 1px solid;
-    border-radius: 4px;
-    &:hover{
-        background-color: rgba(255, 255, 255, 0.075);
-    }
-}
 }
 
 footer{
@@ -319,59 +360,58 @@ footer{
     background: #F64747;
     color:$text-color;
     text-align:center;
-     .icons{
-        text-align: center;
-        padding: 20px;
-        cursor:pointer;
-        list-style: none;
-        margin:20px;
-        display: block;
-
-            div{
-                display: inline-block;
-            }
-            .twitter{
-                width:35px;
-                height:35px;
-                background:url(images/ball.png) no-repeat center;
-                border:none;
-            }
-            .facebook{
-                width:35px;
-                height:35px;
-                background:url(images/face-btn.png) no-repeat center;
-                border:none;
-            }
-            .bird{
-                width: 35px;
-                height:35px;
-                background:url(images/bird-btn.png) no-repeat center;
-                border:none;
-            }
-            .round{
-                background-color: rgba(255, 255, 255, 0.15);
-                border-radius: 100%;
-                height: 64px;
-                width: 64px;
-                color:$text-color;
-
-                &:hover{
-                    color: rgba(255, 255, 255, 0.25);
-                    background-color: rgba(255, 255, 255, 0);
-                    box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.25);
+        .icons{
+            text-align: center;
+            padding: 20px;
+            cursor:pointer;
+            list-style: none;
+            margin:20px;
+            display: block;
+                div{
+                    display: inline-block;
                 }
-            }
+                .twitter{
+                    width:35px;
+                    height:35px;
+                    background:url(images/ball.png) no-repeat center;
+                    border:none;
+                }
+                .facebook{
+                    width:35px;
+                    height:35px;
+                    background:url(images/face-btn.png) no-repeat center;
+                    border:none;
+                }
+                .bird{
+                    width: 35px;
+                    height:35px;
+                    background:url(images/bird-btn.png) no-repeat center;
+                    border:none;
+                }
+                .round{
+                    background-color: rgba(255, 255, 255, 0.15);
+                    border-radius: 100%;
+                    height: 64px;
+                    width: 64px;
+                    color:$text-color;
+
+                        &:hover{
+                             color: rgba(255, 255, 255, 0.25);
+                            background-color: rgba(255, 255, 255, 0);
+                            box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.25);
+                        }
+                }
         }
-    .info-template{
-        font-size: 13px;
-        color:rgba(255, 255, 255, 0.5);
-            span{
-                text-transform: uppercase;
-            text-decoration-line: underline;
-            color:$text-color;
-            }
-    }
-    }
+        .info-template{
+            font-size: 13px;
+            color:rgba(255, 255, 255, 0.5);
+                span{
+                    text-transform: uppercase;
+                    text-decoration-line: underline;
+                    color:$text-color;
+                }
+        }
+}
 
     
 
@@ -462,10 +502,13 @@ header{
     background-color:$back-color;
     top: 0;
    .header-menu {
-
    .logo a, .menu-hover{
        font-size:14px}
    }
+   
+}
+header .header-menu .menu-app .container .col-xs-12 nav .menu {
+    max-width: 200px;
 }
 
 
@@ -482,6 +525,10 @@ header{
     button{
         width:98%;
     }
+}
+.block-title-2 .box{
+    box-sizing: border-box;
+    padding: 16px;
 }
 }
 
