--- a/style.css
+++ b/style.css
@@ -48,188 +48,6 @@ table {
   border-spacing: 0;
 }
 
-@media (min-width: 768px) {
-  .col-sm-1 {
-    flex: 0 0 parcentage(0.0833333333);
-    max-width: parcentage(0.0833333333);
-  }
-
-  .col-sm-2 {
-    flex: 0 0 parcentage(0.1666666667);
-    max-width: parcentage(0.1666666667);
-  }
-
-  .col-sm-3 {
-    flex: 0 0 parcentage(0.25);
-    max-width: parcentage(0.25);
-  }
-
-  .col-sm-4 {
-    flex: 0 0 parcentage(0.3333333333);
-    max-width: parcentage(0.3333333333);
-  }
-
-  .col-sm-5 {
-    flex: 0 0 parcentage(0.4166666667);
-    max-width: parcentage(0.4166666667);
-  }
-
-  .col-sm-6 {
-    flex: 0 0 parcentage(0.5);
-    max-width: parcentage(0.5);
-  }
-
-  .col-sm-7 {
-    flex: 0 0 parcentage(0.5833333333);
-    max-width: parcentage(0.5833333333);
-  }
-
-  .col-sm-8 {
-    flex: 0 0 parcentage(0.6666666667);
-    max-width: parcentage(0.6666666667);
-  }
-
-  .col-sm-9 {
-    flex: 0 0 parcentage(0.75);
-    max-width: parcentage(0.75);
-  }
-
-  .col-sm-10 {
-    flex: 0 0 parcentage(0.8333333333);
-    max-width: parcentage(0.8333333333);
-  }
-
-  .col-sm-11 {
-    flex: 0 0 parcentage(0.9166666667);
-    max-width: parcentage(0.9166666667);
-  }
-
-  .col-sm-12 {
-    flex: 0 0 parcentage(1);
-    max-width: parcentage(1);
-  }
-}
-@media (min-width: 992px) {
-  .col-md-1 {
-    flex: 0 0 parcentage(0.0833333333);
-    max-width: parcentage(0.0833333333);
-  }
-
-  .col-md-2 {
-    flex: 0 0 parcentage(0.1666666667);
-    max-width: parcentage(0.1666666667);
-  }
-
-  .col-md-3 {
-    flex: 0 0 parcentage(0.25);
-    max-width: parcentage(0.25);
-  }
-
-  .col-md-4 {
-    flex: 0 0 parcentage(0.3333333333);
-    max-width: parcentage(0.3333333333);
-  }
-
-  .col-md-5 {
-    flex: 0 0 parcentage(0.4166666667);
-    max-width: parcentage(0.4166666667);
-  }
-
-  .col-md-6 {
-    flex: 0 0 parcentage(0.5);
-    max-width: parcentage(0.5);
-  }
-
-  .col-md-7 {
-    flex: 0 0 parcentage(0.5833333333);
-    max-width: parcentage(0.5833333333);
-  }
-
-  .col-md-8 {
-    flex: 0 0 parcentage(0.6666666667);
-    max-width: parcentage(0.6666666667);
-  }
-
-  .col-md-9 {
-    flex: 0 0 parcentage(0.75);
-    max-width: parcentage(0.75);
-  }
-
-  .col-md-10 {
-    flex: 0 0 parcentage(0.8333333333);
-    max-width: parcentage(0.8333333333);
-  }
-
-  .col-md-11 {
-    flex: 0 0 parcentage(0.9166666667);
-    max-width: parcentage(0.9166666667);
-  }
-
-  .col-md-12 {
-    flex: 0 0 parcentage(1);
-    max-width: parcentage(1);
-  }
-}
-.col-xs-1 {
-  flex: 0 0 parcentage(0.0833333333);
-  max-width: parcentage(0.0833333333);
-}
-
-.col-xs-2 {
-  flex: 0 0 parcentage(0.1666666667);
-  max-width: parcentage(0.1666666667);
-}
-
-.col-xs-3 {
-  flex: 0 0 parcentage(0.25);
-  max-width: parcentage(0.25);
-}
-
-.col-xs-4 {
-  flex: 0 0 parcentage(0.3333333333);
-  max-width: parcentage(0.3333333333);
-}
-
-.col-xs-5 {
-  flex: 0 0 parcentage(0.4166666667);
-  max-width: parcentage(0.4166666667);
-}
-
-.col-xs-6 {
-  flex: 0 0 parcentage(0.5);
-  max-width: parcentage(0.5);
-}
-
-.col-xs-7 {
-  flex: 0 0 parcentage(0.5833333333);
-  max-width: parcentage(0.5833333333);
-}
-
-.col-xs-8 {
-  flex: 0 0 parcentage(0.6666666667);
-  max-width: parcentage(0.6666666667);
-}
-
-.col-xs-9 {
-  flex: 0 0 parcentage(0.75);
-  max-width: parcentage(0.75);
-}
-
-.col-xs-10 {
-  flex: 0 0 parcentage(0.8333333333);
-  max-width: parcentage(0.8333333333);
-}
-
-.col-xs-11 {
-  flex: 0 0 parcentage(0.9166666667);
-  max-width: parcentage(0.9166666667);
-}
-
-.col-xs-12 {
-  flex: 0 0 parcentage(1);
-  max-width: parcentage(1);
-}
-
 body {
   margin: 0px;
   font-family: "Open Sans", sans-serif;
@@ -244,11 +62,34 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
 }
 
+h2 {
+  font-size: 25px;
+}
+
+h3 {
+  font-size: 20px;
+}
+
+h4 {
+  font-size: 16px;
+}
+
+h5 {
+  font-size: 13px;
+}
+
+h6 {
+  font-size: 10px;
+}
+
+p {
+  font-size: 14px;
+}
+
 .container {
   padding-left: 15px;
   padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
 }
 .container .row {
   display: flex;
@@ -305,6 +146,7 @@ header .header-menu .menu-app {
   display: flex;
   align-items: center;
   left: 10px;
+  z-index: 5;
 }
 header .header-menu .menu-app:hover {
   background-color: transparent;
@@ -578,6 +420,235 @@ header .header-menu .menu-app .container .col-xs-12 nav .nav-mobile-menu span:nt
   background-color: rgba(255, 255, 255, 0.075);
 }
 
+section.block .block-alt-third {
+  padding: 80px 20px;
+}
+section.block .block-alt-third .block-bk-flex {
+  display: flex;
+}
+section.block .block-alt-third .block-bk-flex .block-bk {
+  margin: 20px;
+  width: 100%;
+}
+section.block .block-alt-third .block-bk-flex .block-bk h2, section.block .block-alt-third .block-bk-flex .block-bk h3, section.block .block-alt-third .block-bk-flex .block-bk h4, section.block .block-alt-third .block-bk-flex .block-bk h5, section.block .block-alt-third .block-bk-flex .block-bk h6, section.block .block-alt-third .block-bk-flex .block-bk p {
+  padding: 15px 0px;
+  line-height: 25px;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .title.pad {
+  padding-right: 25px;
+  line-height: 25px;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .title.pad ul li, section.block .block-alt-third .block-bk-flex .block-bk .title.pad ol li {
+  padding-left: 8px;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .title ul {
+  list-style: disc;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .title ol {
+  list-style: decimal;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .title .list-alt {
+  list-style: none;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .title .icons {
+  display: flex;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .title .icons .twitter {
+  width: 35px;
+  height: 35px;
+  background: url(images/ball.png) no-repeat center;
+  border: none;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .title .icons .facebook {
+  width: 35px;
+  height: 35px;
+  background: url(images/face-btn.png) no-repeat center;
+  border: none;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .title .icons .bird {
+  width: 35px;
+  height: 35px;
+  background: url(images/bird-btn.png) no-repeat center;
+  border: none;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .title dd {
+  margin-left: 2em;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .title blockquote {
+  border-left: solid 4px;
+  font-style: italic;
+  margin: 0 0 32px 0;
+  padding: 4px 0 4px 32px;
+  border-left-color: rgba(144, 144, 144, 0.25);
+  line-height: 25px;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .table table {
+  width: 100%;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .table table thead {
+  font-size: 15px;
+  font-weight: bold;
+  text-align: left;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .table table thead th {
+  padding: 0 10px 10px 10px;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .table table tbody {
+  font-size: 15px;
+  text-align: left;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .table table tbody tr {
+  border: solid 1px;
+  border-left: 0;
+  border-right: 0;
+  border-color: rgba(144, 144, 144, 0.25);
+}
+section.block .block-alt-third .block-bk-flex .block-bk .table table tbody tr td {
+  padding: 10px;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .table table tbody tr:nth-child(2n+1) {
+  background-color: rgba(144, 144, 144, 0.075);
+}
+section.block .block-alt-third .block-bk-flex .block-bk .table table tfoot td {
+  padding: 10px;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .block-style {
+  max-width: -webkit-fill-available;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .block-style .action {
+  display: flex;
+  align-items: center;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .block-style .action li {
+  margin: 25px 15px 25px 0px;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .block-style .action li a.button, section.block .block-alt-third .block-bk-flex .block-bk .block-style .action li span.button, section.block .block-alt-third .block-bk-flex .block-bk .block-style .action li input.button {
+  padding: 10px 25px;
+  border-radius: 4px;
+  border: 0;
+  cursor: pointer;
+  font-weight: bold;
+  height: 40px;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  background-color: #5a5a5a;
+  color: #fff;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .block-style .action li a.button.special, section.block .block-alt-third .block-bk-flex .block-bk .block-style .action li span.button.special, section.block .block-alt-third .block-bk-flex .block-bk .block-style .action li input.button.special {
+  background-color: #f64242;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .block-style .action li a.button.btn-alt, section.block .block-alt-third .block-bk-flex .block-bk .block-style .action li span.button.btn-alt, section.block .block-alt-third .block-bk-flex .block-bk .block-style .action li input.button.btn-alt {
+  background-color: transparent;
+  box-shadow: inset 0 0 0 2px rgba(144, 144, 144, 0.25);
+}
+section.block .block-alt-third .block-bk-flex .block-bk .block-style .action li a.button.big, section.block .block-alt-third .block-bk-flex .block-bk .block-style .action li span.button.big, section.block .block-alt-third .block-bk-flex .block-bk .block-style .action li input.button.big {
+  font-size: 26px;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .block-style .action li a.button.small, section.block .block-alt-third .block-bk-flex .block-bk .block-style .action li span.button.small, section.block .block-alt-third .block-bk-flex .block-bk .block-style .action li input.button.small {
+  font-size: 12px;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .block-style .action li a.button.fit, section.block .block-alt-third .block-bk-flex .block-bk .block-style .action li span.button.fit, section.block .block-alt-third .block-bk-flex .block-bk .block-style .action li input.button.fit {
+  padding: 10px 80px;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .block-style .action li a.button.fit-s, section.block .block-alt-third .block-bk-flex .block-bk .block-style .action li span.button.fit-s, section.block .block-alt-third .block-bk-flex .block-bk .block-style .action li input.button.fit-s {
+  padding: 10px 50px;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .block-style .action li a.button.disabled, section.block .block-alt-third .block-bk-flex .block-bk .block-style .action li span.button.disabled, section.block .block-alt-third .block-bk-flex .block-bk .block-style .action li input.button.disabled {
+  opacity: 0.25;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .block-style form .block-bk:first-child {
+  margin-left: 0px;
+  margin-right: 20px;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .block-style form .block-bk input {
+  width: 100%;
+  height: 40px;
+  background: rgba(144, 144, 144, 0.075);
+  border-color: rgba(144, 144, 144, 0.25);
+  padding: 0px 10px;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .block-style form .block-bk .block-radio {
+  padding: 15px 15px 15px 0px;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .block-style form .select select {
+  width: 100%;
+  height: 40px;
+  background: rgba(144, 144, 144, 0.075);
+  border-color: rgba(144, 144, 144, 0.25);
+  color: #fff;
+  padding: 0px 10px;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .block-style form .block-bk-flex {
+  justify-content: space-between;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .block-style form .block-bk-flex .block-radio {
+  padding: 15px 15px 15px 0px;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .block-style form .block-textarea {
+  margin: 20px 0px;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .block-style form .block-textarea textarea {
+  width: 95%;
+  background: rgba(144, 144, 144, 0.075);
+  border-color: rgba(144, 144, 144, 0.25);
+  color: #fff;
+  padding: 10px 16px;
+  border-radius: 4px;
+  line-height: 25px;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .block-style form .block-textarea textarea::placeholder {
+  font-size: 14px;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .img {
+  border-radius: 4px;
+  display: block;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .image.left {
+  float: left;
+  margin: 0 25px 16px 0;
+  top: 4px;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .image.right {
+  float: right;
+  margin: 0 0 16px 25px;
+  top: 4px;
+}
+section.block .block-alt-third .block-bk-flex .block-bk .box-black {
+  background: black;
+  border-radius: 6px;
+  padding: 64px;
+}
+section.block .block-alt-third .bold {
+  font-weight: bold;
+}
+section.block .block-alt-third .italic {
+  font-style: italic;
+}
+section.block .block-alt-third .sup {
+  vertical-align: super;
+}
+section.block .block-alt-third .sub {
+  vertical-align: sub;
+}
+section.block .block-alt-third .underlined {
+  text-decoration: underline;
+}
+section.block .block-alt-third code {
+  border-radius: 4px;
+  border: solid 1px;
+  font-family: "Courier New", monospace;
+  font-size: 15px;
+  margin: 0 5px;
+  padding: 5px 9px;
+  background: rgba(144, 144, 144, 0.075);
+  border-color: grey;
+}
+section.block .block-alt-third a {
+  color: #f64242;
+  text-decoration: underline;
+}
+
 footer {
   cursor: pointer;
   background: #F64747;
@@ -677,6 +748,14 @@ footer .info-template span {
   .container {
     max-width: 960px;
   }
+  .container .col-md-6 {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+  .container .col-md-12 {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
 
   header {
     height: 50px;
@@ -710,35 +789,29 @@ footer .info-template span {
   }
 }
 @media (max-width: 480px) {
-  header {
+  body header {
     background-color: #0E0E0E;
     top: 0;
   }
-  header .header-menu .logo a, header .header-menu .menu-hover {
+  body header .header-menu .logo a, body header .header-menu .menu-hover {
     font-size: 14px;
   }
-
-  header .header-menu .menu-app .container .col-xs-12 nav .menu {
+  body header .header-menu .menu-app .container .col-xs-12 nav .menu {
     max-width: 200px;
   }
-
-  .block {
+  body .block {
     padding: 15px 0;
   }
-
-  .block-title h1 {
+  body .block-title h1 {
     font-size: 64px;
   }
-
-  .learn-more button {
+  body .learn-more button {
     width: 100%;
   }
-
-  .contact-info button {
+  body .contact-info button {
     width: 98%;
   }
-
-  .block-title-2 .box {
+  body .block-title-2 .box {
     box-sizing: border-box;
     padding: 16px;
   }
